pamc/src/tests/sample_code/should_fail/parse/check/goal_type_question.ph
type Unit {
    .U: Unit,
}

let foo = fun _(_: Unit): Unit {
    check (goal: ?) {
        Unit.U
    }
};
